<resources>
    <string name="app_name">R6Companion</string>

    <string name="home_fragment_label">Home</string>
    <string name="roulette_fragment_label">Roulette</string>
    <string name="operators_fragment_label">Operators</string>
    <string name="weapons_fragment_label">Weapons</string>
    <string name="maps_fragment_label">Maps</string>
    <string name="roulette_result_fragment_label">Roulette result</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="companion_fragment_label">Companion</string>
    <string name="about_fragment_label">About</string>
    <string name="news_details_label">News details</string>

    <string name="operator_img_description">Operator\'s image</string>
    <string name="operator_icon_description">Operator\'s icon</string>

    <string name="coming_soon">Coming soon</string>
    <string name="roll">Roll</string>
    <string name="roll_counted_pattern">Roll %1$d/%2$d</string>

    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="alphabetic_sort_ascending">Alphabetic sort ascending</string>
    <string name="alphabetic_sort_descending">Alphabetic sort descending</string>
    <string name="sort_selected">Selected first</string>
    <string name="select_all">Select all</string>
    <string name="clear_selections">Clear selections</string>
    <string name="save_selected">Save selected</string>
    <string name="delete_saved">Delete saved</string>
    <string name="restore_saved">Restore saved</string>
    <string name="winner">Winner</string>
    <string name="winner_candidates">Winner candidates</string>
    <string name="winner_">Winner:</string>

    <string name="screen_and_share">Share screenshot</string>
    <string name="share_with">Share with</string>

    <string name="attention">Attention</string>
    
    <string name="save_confirmation_message">Saving the operators will result in erasing any previous saved data. Do you wish to proceed?</string>
    <string name="delete_saved_confirmation_message">Are you sure you want to delete saved selection?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_off">Dark mode always off</string>
    <string name="dark_mode_on">Dark mode always on</string>
    <string name="dark_mode_adaptive">Adaptive (Depends on surrounding illumination)</string>
    <string name="dark_mode_system_default">System default</string>
    <string name="dark_mode_set_by_battery_saver">Set by battery saver</string>
    <string name="illumination_calibration">Illumination calibration</string>
    <string name="illumination_calibration_summary">Select value to be used as illumination threshold for enabling dark mode</string>
    <string name="use_mobile_network">Use mobile network</string>
    <string name="use_mobile_network_summary">Enable this to allow image downloading while using mobile network</string>
    <string name="about">About</string>
    <string name="our_team">Our team</string>
    <string name="mission">Mission</string>
    <string name="mission_text">Our mission…</string>

    <string name="an_error_occurred">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="scroll_to_top">Scroll to top</string>

    <string name="lang">en</string>

    <string name="language">Language</string>

    <string name="ad_label">Ad</string>

    <string name="default_notification_channel_id" translatable="false">default_notification_channel</string>
    <string name="notification_channel_name" translatable="false">Notification channel name</string>
    <string name="notification_channel_description" translatable="false">Notification channel description</string>
    <string name="first_name_last_name_pattern" translatable="false">%1$s %2$s</string>

    <string name="operator_armor">Armor</string>
    <string name="operator_speed">Speed</string>

    <string name="news_category_all">All</string>
    <string name="news_category_esport">ESport</string>
    <string name="news_category_game_updates">Game updates</string>
    <string name="news_category_community">Community</string>
    <string name="news_category_patch_notes">Patch notes</string>
    <string name="news_category_store">Store</string>

    <string name="language_en" translatable="false">English</string>
    <string name="language_ru" translatable="false">Русский</string>

    <string name="preference_key_dark_mode" translatable="false">dark_mode</string>
    <string name="preference_key_illumination_threshold" translatable="false">illumination_threshold</string>
    <string name="preference_key_use_mobile_network_for_image_downloading" translatable="false">use_mobile_network_for_image_downloading</string>
    <string name="preference_key_about" translatable="false">about</string>

    <string name="ad_mod_app_id" translatable="false">ca-app-pub-6576243137966846~4299148913</string>
<!--    <string name="ad_mod_first_ad_unit" translatable="false">ca-app-pub-3940256099942544/2247696110</string> &lt;!&ndash; TEST &ndash;&gt;-->
    <string name="ad_mod_first_ad_unit" translatable="false">ca-app-pub-6576243137966846/6466340777</string> <!-- REAL -->

    <string name="in_app_update_downloaded">Update downloaded</string>
    <string name="in_app_update_installed">Update installed</string>
    <string name="in_app_update_failed">Update failed</string>

    <string name="operator_details_organization" translatable="false">Organization</string>
    <string name="operator_details_role" translatable="false">Role</string>
    <string name="operator_details_stats" translatable="false">Stats</string>
    <string name="operator_details_speed" translatable="false">Speed</string>
    <string name="operator_details_armor" translatable="false">Armor</string>
    <string name="operator_details_loadout" translatable="false">Loadout</string>
    <string name="operator_details_primaries" translatable="false">Primaries</string>
    <string name="operator_details_secondaries" translatable="false">Secondaries</string>
    <string name="operator_details_gadgets" translatable="false">Gadgets</string>
    <string name="operator_details_ability" translatable="false">Ability</string>
</resources>