<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sort"
        android:orderInCategory="101"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/alphabetic_sort_ascending"
                android:orderInCategory="102"
                android:icon="@drawable/ic_sort_by_alpha_white_24dp"
                android:title="@string/alphabetic_sort_ascending" />

            <item
                android:id="@+id/alphabetic_sort_descending"
                android:orderInCategory="103"
                android:icon="@drawable/ic_sort_by_alpha_white_24dp"
                android:title="@string/alphabetic_sort_descending" />
        </menu>

    </item>

    <item
        android:id="@+id/settings"
        android:orderInCategory="104"
        android:title="@string/sort"
        app:showAsAction="never">

        <item
            android:id="@+id/select_all"
            android:icon="@drawable/ic_done_all_24dp"
            android:orderInCategory="105"
            android:title="@string/select_all" />

        <item
            android:id="@+id/un_select_all"
            android:icon="@drawable/ic_clear_24dp"
            android:orderInCategory="106"
            android:title="@string/clear_selections" />

        <item
            android:id="@+id/save_selected"
            android:icon="@drawable/ic_save_24dp"
            android:orderInCategory="107"
            android:title="@string/save_selected" />

        <item
            android:id="@+id/delete_saved"
            android:icon="@drawable/ic_delete_24dp"
            android:orderInCategory="108"
            android:title="@string/delete_saved" />

        <item
            android:id="@+id/restore_saved"
            android:icon="@drawable/ic_restore_24dp"
            android:orderInCategory="109"
            android:title="@string/restore_saved" />

    </item>

</menu>