<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news_language"
        android:title="@string/language"
        android:icon="@drawable/ic_language"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/language_en"
                android:orderInCategory="100"
                android:icon="@drawable/ic_language_en"
                android:title="@string/language_en" />

            <item
                android:id="@+id/language_ru"
                android:orderInCategory="101"
                android:icon="@drawable/ic_language_ru"
                android:title="@string/language_ru" />
        </menu>

    </item>

</menu>